--- a/160927_PersonalPage/160927_PersonalPage/160927_PersonalPage.csproj
+++ b/160927_PersonalPage/160927_PersonalPage/160927_PersonalPage.csproj
@@ -139,6 +139,7 @@
     </Content>
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
+    <None Include="Properties\PublishProfiles\T4TestWebApp - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
