--- a/EmulatorUpgf/EmulatorUpgf/EmulatorUpgf.csproj
+++ b/EmulatorUpgf/EmulatorUpgf/EmulatorUpgf.csproj
@@ -160,6 +160,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
+    <Content Include="Views\Home\SpamList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
